<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_anchor="@+id/constraintLayout"
    app:layout_anchorGravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/tvPostulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mis_anuncios"
            android:textColor="#7E57C2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tilTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.438" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="71dp"
            android:layout_height="72dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="68dp"
            android:contentDescription="@string/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_paradox" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="285dp"
            android:layout_height="60dp"
            android:layout_marginTop="240dp"
            android:hint="@string/puesto_empresa_o_palabra_clave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnBuscarAnuncio"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:backgroundTint="#7E57C2"
            android:text="@string/buscar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
